// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data Selection Reducer should set dataset state when dispatching setDataset 1`] = `
Object {
  "dataset": "foobar",
}
`;

exports[`Data Selection Reducer should set geometryFilter state when dispatching setGeometryFilter 1`] = `
Object {
  "geometryFilter": Array [
    Object {
      "filter": "foo",
    },
  ],
}
`;

exports[`Data Selection Reducer should set isLoading, markers state when dispatching fetchDataSelection 1`] = `
Object {
  "isLoading": true,
  "markers": Array [],
}
`;

exports[`Data Selection Reducer should set markers, isLoading state when dispatching setMarkers 1`] = `
Object {
  "isLoading": false,
  "markers": Array [
    Object {
      "markers": Array [],
    },
  ],
}
`;

exports[`Data Selection Reducer should set page state when dispatching setPage 1`] = `
Object {
  "page": 1,
}
`;

exports[`Data Selection Reducer should set view state when dispatching setView 1`] = `
Object {
  "view": "map",
}
`;
